--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 
 <div class="sidebar-wrapper">
-    <div class="logo">
+    <div class="logo" style="background-color: #1e88e5;">
         <a href="http://www.creative-tim.com" class="simple-text">
-            <div class="logo-img">
-                <img src="/assets/img/angular2-logo-white.png"/>
+            <div class="logo-img" >
+                <img style="width: 15rem;" src="/assets/img/logo.png"/>
             </div>
-            Creative Tim
+         
         </a>
     </div>
     <ul class="nav responsive-nav">
